# a2a_cross_framework_poc

./: app.py  pyproject.toml
src/a2a_cross_framework_poc/editor_agent_crewai/: agent_config.py  main.py  rpc_server.py
src/a2a_cross_framework_poc/shared/agent_cards/: editor_card.json  writer_card.json
src/a2a_cross_framework_poc/shared/json_rpc/: server.py
src/a2a_cross_framework_poc/shared/schema/: a2a_protocol_models.py  a2a_protocol_schema.json
src/a2a_cross_framework_poc/writer_agent_langgraph/: agent_flow.py  main.py  rpc_server.py
