[project]
name = "a2a-cross-framework-poc"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langgraph (>=0.4.1,<0.5.0)",
    "crewai (>=0.118.0,<0.119.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "openai (>=1.77.0,<2.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "langchain-openai (>=0.3.16,<0.4.0)",
    "streamlit (>=1.45.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "a2a_cross_framework_poc", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
